sixth stage